--- a/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/AssemblyBrowserWindow.xaml
@@ -15,7 +15,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>                
                 <ResourceDictionary Source="..\Common\ControlStylesDictionary.xaml"/>
-                <ResourceDictionary Source="Dictionaries\ImagesDictionary.xaml"/>
+                <ResourceDictionary Source="..\Common\ImagesDictionary.xaml"/>
 
                 <ResourceDictionary Source="/PresentationFramework.Aero, Version=3.0.0.0,
                                             Culture=neutral, PublicKeyToken=31bf3856ad364e35,
