--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                    
                     xmlns:ViewModels="clr-namespace:ILSpyVisualizer.AssemblyBrowser.ViewModels">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ImagesDictionary.xaml"/>
+        <ResourceDictionary Source="..\..\Common\ImagesDictionary.xaml"/>
         <ResourceDictionary Source="..\..\Common\ControlStylesDictionary.xaml"/>
         <ResourceDictionary Source="..\..\Common\DataTemplatesDictionary.xaml"/>
     </ResourceDictionary.MergedDictionaries>
