--- a/sources/ILSpyVisualizer/Common/ImagesDictionary.xaml
+++ b/sources/ILSpyVisualizer/Common/ImagesDictionary.xaml
@@ -86,8 +86,54 @@
                 </DrawingGroup>
             </DrawingGroup>
         </DrawingBrush.Drawing>
-    </DrawingBrush>   
-    
+    </DrawingBrush>
+
+    <!--Down arrow-->
+    <DrawingBrush x:Key="DownArrowDrawing" Stretch="Uniform">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup>
+                    <DrawingGroup Transform="1.21446597576141,0,0,0.595457971096039,-6.16384601593018,16.3127498626709">
+                        <GeometryDrawing Geometry="M40.482,36.421A15.645,8.397,0.000,1,1,9.192,36.421A15.645,8.397,0.000,1,1,40.482,36.421z">
+                            <GeometryDrawing.Brush>
+                                <RadialGradientBrush Center="24.837,36.421" RadiusX="15.645" RadiusY="15.645" GradientOrigin="24.837,36.421" MappingMode="Absolute" Transform="1,0,0,0.536723017692566,1.61471605976805E-15,16.8730602264404">
+                                    <GradientStop Color="Black" Offset="0" ></GradientStop>
+                                    <GradientStop Color="#00000000" Offset="1" ></GradientStop>
+                                </RadialGradientBrush>
+                            </GeometryDrawing.Brush>
+                        </GeometryDrawing>
+                    </DrawingGroup>
+                    <DrawingGroup Transform="-1,0,0,-1,47.0285606384277,43.999210357666">
+                        <GeometryDrawing Geometry="F1M14.519,38.500L32.524,38.496 32.524,25.504 40.520,25.497 23.375,5.499 6.529,25.497 14.524,25.501 14.519,38.500z">
+                            <GeometryDrawing.Brush>
+                                <RadialGradientBrush Center="35.293,20.494" RadiusX="16.956" RadiusY="16.956" GradientOrigin="35.293,20.494" MappingMode="Absolute" Transform="1.87188497696357E-16,-0.843021988868713,1.02016794681549,2.26522815177606E-16,0.606436014175415,42.5861396789551">
+                                    <GradientStop Color="#FF73D216" Offset="0" ></GradientStop>
+                                    <GradientStop Color="#FF4E9A06" Offset="1" ></GradientStop>
+                                </RadialGradientBrush>
+                            </GeometryDrawing.Brush>
+                            <GeometryDrawing.Pen>
+                                <Pen Brush="#FF3A7304" Thickness="1" StartLineCap="Round" EndLineCap="Round" DashCap="Round" LineJoin="Round" ></Pen>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="F1M39.430,24.993L32.023,25.005 32.026,37.998 16.648,37.989C17.418,19.648,27.370,26.996,32.029,16.342L39.430,24.993z">
+                            <GeometryDrawing.Brush>
+                                <RadialGradientBrush Center="15.987,1.535" RadiusX="17.171" RadiusY="17.171" GradientOrigin="15.987,1.535" MappingMode="Absolute" Transform="3.74942707522362E-16,-2.04672908782959,-1.55761003494263,-2.8534041245803E-16,44.1155891418457,66.932746887207">
+                                    <GradientStop Color="White" Offset="0" ></GradientStop>
+                                    <GradientStop Color="Transparent" Offset="1" ></GradientStop>
+                                </RadialGradientBrush>
+                            </GeometryDrawing.Brush>
+                        </GeometryDrawing>
+                        <GeometryDrawing Geometry="F1M15.521,37.496L31.522,37.500 31.522,24.507 38.339,24.491 23.385,7.039 8.678,24.496 15.518,24.501 15.521,37.496z">
+                            <GeometryDrawing.Pen>
+                                <Pen Brush="#7BFFFFFF" Thickness="1" ></Pen>
+                            </GeometryDrawing.Pen>
+                        </GeometryDrawing>
+                    </DrawingGroup>
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+
     <!--Flat magnifier drawing-->
     <SolidColorBrush x:Key="MagnifierBrush" Color="Gainsboro" ></SolidColorBrush>
     <DrawingBrush x:Key="FlatMagnifierDrawing" Stretch="Uniform">
