--- a/sources/ILSpyVisualizer/Common/ControlStylesDictionary.xaml
+++ b/sources/ILSpyVisualizer/Common/ControlStylesDictionary.xaml
@@ -1,6 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+    <Style x:Key="BorderStyle" TargetType="{x:Type Border}">
+        <Setter Property="CornerRadius" Value="10"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
+    </Style>
+
     <!--Hyperlink-->
     <Style x:Key="HyperlinkStyle" TargetType="{x:Type Hyperlink}">
         <Setter Property="TextDecorations" Value="{x:Null}"/>
