--- a/sources/ILSpyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
+++ b/sources/ILSpyVisualizer/AncestryBrowser/AncestryBrowserWindow.xaml
@@ -1,9 +1,14 @@
 ﻿<Window x:Class="ILSpyVisualizer.AncestryBrowser.AncestryBrowserWindow"
         x:ClassModifier="internal"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:AncestryBrowser="clr-namespace:ILSpyVisualizer.AncestryBrowser"
-	Title="{Binding Name}" Height="800" Width="615">
+	    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:AncestryBrowser="clr-namespace:ILSpyVisualizer.AncestryBrowser"
+        xmlns:CommandsGroup="clr-namespace:ILSpyVisualizer.Common.CommandsGroup"
+	    Title="{Binding Name}" 
+        Height="800" 
+        Width="615"
+        MinHeight="415"
+        MinWidth="450">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -43,10 +48,29 @@
                                                 Cursor="Hand"
                                                 Background="Transparent"
                                                 HorizontalAlignment="Left">
-                                                <ContentControl Content="{Binding}"
-                                                            Grid.Column="1"
-                                                            ToolTip="{Binding Text}"/>
+                                                <Grid Margin="0, 2"
+                                                      Grid.Column="1"
+                                                      ToolTip="{Binding ToolTip}">
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="Auto"/>
+                                                        <ColumnDefinition />
+                                                    </Grid.ColumnDefinitions>
+                                                    <Image Source="{Binding Icon}"
+                                                           Margin="0, 0, 6, 0"                    
+                                                           Stretch="Uniform"
+                                                           Width="16"
+                                                           Height="16"/>
+                                                    <TextBlock x:Name="txtMemberName"
+                                                               Text="{Binding Text}"
+                                                               Grid.Column="1" />
+                                                </Grid>                                                
                                             </Button>
+                                            
+                                            <DataTemplate.Triggers>
+                                                <DataTrigger Binding="{Binding IsMarked}" Value="True">
+                                                    <Setter TargetName="txtMemberName" Property="FontWeight" Value="Bold"/>
+                                                </DataTrigger>
+                                            </DataTemplate.Triggers>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
                                 </ItemsControl>
@@ -77,9 +101,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         
-        <Grid TextElement.FontSize="14"
-              TextElement.Foreground="Gray"
-              Margin="20, 10, 10, 10">
+        <Grid Margin="20, 10, 10, 10">
             <Grid.Resources>
                 <Style TargetType="{x:Type CheckBox}">
                     <Setter Property="FontSize" Value="12"/>
@@ -89,12 +111,14 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <StackPanel Margin="0, 4">
                 <TextBlock Text="Member types"
-                           Margin="0, 0, 0, 3"/>
+                           Margin="0, 0, 0, 3"
+                           FontSize="14"
+                           Foreground="Gray"/>
                 <CheckBox Content="Fields"
                           IsChecked="{Binding ShowFields}"/>
                 <CheckBox Content="Events"
@@ -108,7 +132,9 @@
             <StackPanel Grid.Row="1"
                         Margin="0, 4">
                 <TextBlock Text="Visibility"
-                           Margin="0, 0, 0, 3"/>
+                           Margin="0, 0, 0, 3"
+                           FontSize="14"
+                           Foreground="Gray"/>
                 <CheckBox Content="Private"
                           IsChecked="{Binding ShowPrivate}"/>                
                 <CheckBox Content="Internal"
@@ -120,6 +146,12 @@
                 <CheckBox Content="Public"
                           IsChecked="{Binding ShowPublic}"/>
             </StackPanel>
+
+            <CommandsGroup:CommandsGroupView Grid.Row="2"
+                                             DataContext="{Binding KindGroup}"
+                                             Commands="{Binding Commands}"
+                                             Header="{Binding Header}"
+                                             Margin="0, 4"/>
         </Grid>
         
         <Grid Grid.Column="1">
