--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -11,6 +11,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="..\Dictionaries\DataTemplatesDictionary.xaml"/>
+                
             </ResourceDictionary.MergedDictionaries>
 
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -150,7 +151,8 @@
         <!--Search results-->
         <ItemsControl ItemsSource="{Binding SearchResults}"
                       Grid.Row="1"
-                      Grid.Column="1">
+                      Grid.Column="1"
+                      AlternationCount="2">
             <ItemsControl.Template>
                 <ControlTemplate>
                     <ScrollViewer CanContentScroll="True"
@@ -163,110 +165,148 @@
                 </ControlTemplate>
             </ItemsControl.Template>
             <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Grid Margin="5">
-                        <Border Style="{StaticResource BorderStyle}"
-                                x:Name="brdMain">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition Width="Auto"/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock FontSize="16"
-                                           FontWeight="Bold"
-                                           Margin="9, 6"
-                                           HorizontalAlignment="Left"
-                                           TextWrapping="Wrap">
-                                    <TextBlock ToolTip="{Binding ExtendedInfo}">
-                                        <Hyperlink Command="{Binding BrowseAncestryCommand}"
+                <DataTemplate>                                          
+                    <Border x:Name="brdMain"
+                            Background="Transparent">
+                        <Grid Margin="6, 5"
+                              VerticalAlignment="Center">
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <!--<ColumnDefinition Width="Auto"/>-->
+                            </Grid.ColumnDefinitions>
+                            <TextBlock FontSize="16"
+                                       FontWeight="Bold"
+                                       Margin="0, 0, 9, 8"
+                                       HorizontalAlignment="Left"
+                                       TextWrapping="Wrap">
+                                <TextBlock ToolTip="{Binding ExtendedInfo}">
+                                    <Hyperlink Command="{Binding BrowseAncestryCommand}"
+                                               TextDecorations="None"
+                                               Foreground="Black">
+                                        <TextBlock Text="{Binding Name}"                                                
+                                                   TextWrapping="Wrap"/>
+                                    </Hyperlink>
+                                </TextBlock>
+                                <TextBlock x:Name="txtBaseType">
+                                    <Run Text=" : "/>
+                                    <TextBlock ToolTip="{Binding BaseTypeFullName}">
+                                        <Hyperlink x:Name="hplNavigateToBase"
                                                    TextDecorations="None"
-                                                   Foreground="Black">
-                                            <TextBlock Text="{Binding Name}"                                                
-                                                       TextWrapping="Wrap"/>
+                                                   Foreground="Black"                                                       
+                                                   Command="{Binding NavigateToBaseCommand}">
+                                            <TextBlock Text="{Binding BaseTypeName}"/>
                                         </Hyperlink>
-                                    </TextBlock>
-                                    <TextBlock x:Name="txtBaseType">
-                                        <Run Text=" : "/>
-                                        <TextBlock ToolTip="{Binding BaseTypeFullName}">
-                                            <Hyperlink x:Name="hplNavigateToBase"
-                                                       TextDecorations="None"
-                                                       Foreground="Black"                                                       
-                                                       Command="{Binding NavigateToBaseCommand}">
-                                                <TextBlock Text="{Binding BaseTypeName}"/>
-                                            </Hyperlink>
-                                        </TextBlock>
                                     </TextBlock>
                                 </TextBlock>
+                            </TextBlock>
 
-                                <Grid Grid.Row="1"
-                                      Margin="11, 4">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <StackPanel Orientation="Horizontal"
-                                                x:Name="pnlDescendants">
-                                        <TextBlock Text="Direct descendants:" 
-                                                   FontStyle="Italic"/>
-                                        <TextBlock Text="{Binding DirectDescendantsCount}"                                                   
-                                                       FontWeight="Bold"
-                                                   Margin="4, 0, 6, 0"/>
-                                        <TextBlock Text="Total descendants:" 
-                                                   FontStyle="Italic"/>
-                                        <TextBlock Text="{Binding DescendantsCount}"                                                   
-                                                       FontWeight="Bold"
-                                                   Margin="4, 0, 6, 0"/>
-                                    </StackPanel>
-                                    
-                                    <TextBlock x:Name="txtNoDescendants" 
-                                               Text="No descendants"
-                                               Visibility="Collapsed"
-                                               FontStyle="Italic"
-                                               Margin="0, 0, 10, 3"/>
-                                    
-                                    <StackPanel Orientation="Horizontal"
-                                                Grid.Column="1">
-                                        <TextBlock Text="Members:" 
-                                                   FontStyle="Italic"/>
-                                        <TextBlock Text="{Binding MembersCount}"                                                   
+                            <Grid Grid.Row="1"
+                                  Margin="2, 0"
+                                  TextElement.Foreground="#404040">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Orientation="Horizontal"
+                                            x:Name="pnlDescendants">
+                                    <TextBlock Text="Direct descendants:" 
+                                               FontStyle="Italic"/>
+                                    <TextBlock Text="{Binding DirectDescendantsCount}"                                                   
                                                    FontWeight="Bold"
-                                                   Margin="4, 0, 6, 0"/>
-                                    </StackPanel>
-                                </Grid>
+                                               Margin="4, 0, 6, 0"/>
+                                    <TextBlock Text="Total descendants:" 
+                                               FontStyle="Italic"/>
+                                    <TextBlock Text="{Binding DescendantsCount}"                                                   
+                                                   FontWeight="Bold"
+                                               Margin="4, 0, 6, 0"/>
+                                </StackPanel>
                                 
-                                <!--Commands-->
-                                <StackPanel Grid.Column="1"
-                                            Grid.RowSpan="2"
-                                            VerticalAlignment="Center">
-                                    <TextBlock VerticalAlignment="Center"
-                                               Margin="8, 6, 10, 5"                             
-                                               Visibility="{Binding CanVisualize, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                        <Hyperlink Command="{Binding VisualizeCommand}"
-                                                   Style="{StaticResource HyperlinkStyle}">
-                                            <TextBlock Text="Visualize"/>
-                                        </Hyperlink>
-                                    </TextBlock>                                    
-                                    <TextBlock VerticalAlignment="Center"
-                                               Margin="8, 5, 10, 6">
-                                        <Hyperlink Command="{Binding NavigateCommand}"
-                                                   Style="{StaticResource HyperlinkStyle}">
-                                            <TextBlock Text="Jump"/>
-                                        </Hyperlink>
-                                    </TextBlock>
-                                </StackPanel>                                
+                                <TextBlock x:Name="txtNoDescendants" 
+                                           Text="No descendants"
+                                           Visibility="Collapsed"
+                                           FontStyle="Italic"
+                                           Margin="0, 0, 10, 3"/>
+                                
+                                <StackPanel Orientation="Horizontal"
+                                            Grid.Column="1">
+                                    <TextBlock Text="Members:" 
+                                               FontStyle="Italic"/>
+                                    <TextBlock Text="{Binding MembersCount}"                                                   
+                                               FontWeight="Bold"
+                                               Margin="4, 0, 6, 0"/>
+                                </StackPanel>
                             </Grid>
-                        </Border>
-                        <Border Style="{StaticResource BorderStyle}">
-                            <Border.Effect>
-                                <DropShadowEffect/>
-                            </Border.Effect>
-                        </Border>
-                    </Grid>
-                    <DataTemplate.Triggers>
+                            
+                            <!--Commands-->
+                            <StackPanel x:Name="commandsPanel"
+                                        Visibility="Hidden"
+                                        Grid.Column="1"
+                                        Grid.RowSpan="2"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Right"
+                                        Orientation="Horizontal">
+                                <Button VerticalAlignment="Center"                                                                      
+                                        Command="{Binding NavigateCommand}" 
+                                        Margin="4, 0"
+                                        Width="32"
+                                        Height="32"
+                                        MinWidth="0"
+                                        MinHeight="0"
+                                        Background="{StaticResource RightArrowBlueDrawing}"
+                                        Style="{StaticResource ImageButtonStyle}"
+                                        ToolTip="Jump"/>
+
+                                <Button VerticalAlignment="Center"                                                                      
+                                        Command="{Binding VisualizeCommand}" 
+                                        Margin="4, 0"
+                                        Width="32"
+                                        Height="32"
+                                        MinWidth="0"
+                                        MinHeight="0"
+                                        Background="{StaticResource RightArrowDrawing}"
+                                        Style="{StaticResource ImageButtonStyle}"
+                                        Visibility="{Binding CanVisualize, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                        ToolTip="Visualize"/>
+                                <Button VerticalAlignment="Center"                                                                      
+                                        Command="{Binding BrowseAncestryCommand}" 
+                                        Margin="4, 0"
+                                        Width="32"
+                                        Height="32"
+                                        MinWidth="0"
+                                        MinHeight="0"
+                                        Background="{StaticResource DownArrowDrawing}"
+                                        Style="{StaticResource ImageButtonStyle}"                                    
+                                        ToolTip="Browse Ancestry"/>
+                                
+                                <!--<TextBlock VerticalAlignment="Center"
+                                           Margin="8, 6, 10, 5"                             
+                                           Visibility="{Binding CanVisualize, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                    <Hyperlink Command="{Binding VisualizeCommand}"
+                                               Style="{StaticResource HyperlinkStyle}">
+                                        <TextBlock Text="Visualize"/>
+                                    </Hyperlink>
+                                </TextBlock>                                    
+                                <TextBlock VerticalAlignment="Center"
+                                           Margin="8, 5, 10, 6">
+                                    <Hyperlink Command="{Binding NavigateCommand}"
+                                               Style="{StaticResource HyperlinkStyle}">
+                                        <TextBlock Text="Jump"/>
+                                    </Hyperlink>
+                                </TextBlock>-->
+                            </StackPanel>                                
+                        </Grid>
+                    </Border>
+                    <DataTemplate.Triggers>                        
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                            <Setter TargetName="brdMain" Property="Background" Value="#E0FFC2"/>
+                        </Trigger>
+                        <Trigger SourceName="brdMain" Property="IsMouseOver" Value="True">
+                            <Setter TargetName="commandsPanel" Property="Visibility" Value="Visible"/>
+                        </Trigger>
                         <DataTrigger Binding="{Binding HasBaseType}" Value="False">
                             <Setter TargetName="txtBaseType" Property="Visibility" Value="Collapsed"/>
                         </DataTrigger>
